--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Esta es una palicación web</title>
+    <title>Esta es una aplicación web</title>
     <script src="/static/gauge.min.js"></script>
     <script src="/static/jquery.js"></script>
 </head>
