--- a/templates/botones.html
+++ b/templates/botones.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-    <title>Esta es una palicación web</title>
+    <title>Esta es una aplicación web</title>
     <script src="/static/gauge.min.js"></script>
     <script src="/static/jquery.js"></script>
     <script src="/static/jquery-ui/js/jquery-ui-1.10.3.custom.js"></script>
     <link rel="stylesheet" href="/static/jquery-ui/css/ui-lightness/jquery-ui-1.10.3.custom.css">
 </head>
 <body>
-    <h1>Encabezado</h1>
+    <h1>Pingüino PIC18F4550</h1>
+    <p>Ejemplo de Salidas Digitales con LEDS<br/>
     <ul>
         <input type="checkbox" pin="0" id="led_0"><label for="led_0">Led 0</label>
         <input type="checkbox" pin="1" id="led_1"><label for="led_1">Led 1</label>
